--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
-***REMOVED***
+{
   "name": "subj-track",
   "version": "0.1.0",
   "private": true,
-  "scripts": ***REMOVED***
+  "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
-  ***REMOVED***,
-  "dependencies": ***REMOVED***
+  },
+  "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^2.6.5",
     "firebase": "^6.2.4",
@@ -15,8 +15,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
-  ***REMOVED***,
-  "devDependencies": ***REMOVED***
+  },
+  "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
@@ -29,5 +29,5 @@
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-quasar": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
-  ***REMOVED***
-***REMOVED***
+  }
+}
